# BICSNet-PIV

./: .gitignore  LICENSE  README.md  analysis.ipynb  pyproject.toml
_model_multipass/OpenPIV_results_16_/1/: field_A0000.txt
_piv_multipass/OpenPIV_results_16_/0/: field_A0000.txt
_piv_multipass/OpenPIV_results_16_/1/: field_A0000.txt
data/: parameters.csv
data/test_images/: intensity_metrics.csv  scalars.csv
data/test_images/fluid/: 0.tif  1.tif  10.tif  100.tif  101.tif  102.tif  103.tif  104.tif  105.tif  106.tif  107.tif  108.tif  109.tif  11.tif  110.tif  111.tif  112.tif  113.tif  114.tif  115.tif  116.tif  117.tif  118.tif  119.tif  12.tif  120.tif  121.tif  122.tif  123.tif  124.tif  125.tif  126.tif  127.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  (+88 more)
data/test_images/model_outputs1/: 0.tif  0_input.tif  1.tif  10.tif  100.tif  100_truth.tif  101.tif  101_truth.tif  102.tif  102_truth.tif  103.tif  103_truth.tif  104.tif  104_truth.tif  105.tif  105_truth.tif  106.tif  106_truth.tif  107.tif  107_input.tif  108.tif  108_input.tif  109.tif  109_truth.tif  10_truth.tif  11.tif  110.tif  110_truth.tif  111.tif  111_input.tif  112.tif  112_input.tif  113.tif  113_input.tif  114.tif  114_truth.tif  115.tif  115_truth.tif  116.tif  116_input.tif  (+216 more)
data/test_images/model_outputs2/: 0.tif  0_input.tif  0_truth.tif  1.tif  10.tif  100.tif  100_input.tif  100_truth.tif  101.tif  101_input.tif  101_truth.tif  102.tif  102_input.tif  102_truth.tif  103.tif  103_input.tif  103_truth.tif  104.tif  104_input.tif  104_truth.tif  105.tif  105_input.tif  105_truth.tif  106.tif  106_input.tif  106_truth.tif  107.tif  107_input.tif  107_truth.tif  108.tif  108_input.tif  108_truth.tif  109.tif  109_input.tif  109_truth.tif  10_input.tif  10_truth.tif  11.tif  110.tif  110_input.tif  (+344 more)
data/test_images/particle/: 0.tif  1.tif  10.tif  100.tif  101.tif  102.tif  103.tif  104.tif  105.tif  106.tif  107.tif  108.tif  109.tif  11.tif  110.tif  111.tif  112.tif  113.tif  114.tif  115.tif  116.tif  117.tif  118.tif  119.tif  12.tif  120.tif  121.tif  122.tif  123.tif  124.tif  125.tif  126.tif  127.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  (+88 more)
data/test_images/piv_outputs_ws_32/: input_0.txt  input_1.txt  input_10.txt  input_100.txt  input_101.txt  input_102.txt  input_103.txt  input_104.txt  input_105.txt  input_106.txt  input_107.txt  input_108.txt  input_109.txt  input_11.txt  input_110.txt  input_111.txt  input_112.txt  input_113.txt  input_114.txt  input_115.txt  input_116.txt  input_117.txt  input_118.txt  input_119.txt  input_12.txt  input_120.txt  input_121.txt  input_122.txt  input_123.txt  input_124.txt  input_125.txt  input_126.txt  input_127.txt  input_13.txt  input_14.txt  input_15.txt  input_16.txt  input_17.txt  input_18.txt  input_19.txt  (+344 more)
data/test_images/snap1/: 0.tif  1.tif  10.tif  100.tif  101.tif  102.tif  103.tif  104.tif  105.tif  106.tif  107.tif  108.tif  109.tif  11.tif  110.tif  111.tif  112.tif  113.tif  114.tif  115.tif  116.tif  117.tif  118.tif  119.tif  12.tif  120.tif  121.tif  122.tif  123.tif  124.tif  125.tif  126.tif  127.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  (+88 more)
scripts/: install.py  install_pytorch.py  install_windows.bat  install_windows.ps1  test_pytorch_install.py  uninstall.py
src/: bicsnet.py  loader.py  openpiv_analysis.py  pivnet_image_gen.py
(+3 files in other folders)
