[project]
name = "bicsnet-piv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kal", email = "dilipkalagotla@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "jupyter>=1.1.1",
    "numpy<2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "openpiv>=0.25.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tifffile>=2025.9.30",
    "tqdm>=4.67.1",
    "ipykernel>=6.30.1",
    "huggingface_hub>=0.25.0",
]

[dependency-groups]
cuda = [
    "torch==2.2.2 --index-url https://download.pytorch.org/whl/cu121",
    "torchvision==0.17.2 --index-url https://download.pytorch.org/whl/cu121",
]
cpu = [
    "torch==2.2.2 --index-url https://download.pytorch.org/whl/cpu",
    "torchvision==0.17.2 --index-url https://download.pytorch.org/whl/cpu",
]



[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
